Updated category templates swagger &started on budget months endpoint
