# src/routes.ts
@@ -1,8 +1,16 @@
 import prisma from "../lib/prisma";
 import { app } from "./index"
 
-app.get("/users", async (req, res) => {
-    //const users = await prisma.user.findMany();
-    //res.json(users);
+app.get("/budget-months", async (req, res) => {
+    const budgetId = req.query.id
+    if (budgetId) {
+        
+        const record = prisma.budgetMonth.findUnique({
+            where: {
+                id: parseInt(budgetId)
+            }    
+        })
+
+    }
 });
   
